prow/manifests/hook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hook
  name: hook
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: hook
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: hook
    spec:
      containers:
      - args:
        - --dry-run=false
        - --config-path=/etc/config/config.yaml
        image: gcr.io/k8s-prow/hook:v20200518-8da074ad4
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 8081
            scheme: HTTP
          initialDelaySeconds: 3
          periodSeconds: 3
          successThreshold: 1
          timeoutSeconds: 1
        name: hook
        ports:
        - containerPort: 8888
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz/ready
            port: 8081
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 3
          successThreshold: 1
          timeoutSeconds: 600
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/webhook
          name: hmac
          readOnly: true
        - mountPath: /etc/github
          name: oauth
          readOnly: true
        - mountPath: /etc/config
          name: config
          readOnly: true
        - mountPath: /etc/plugins
          name: plugins
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: hook
      serviceAccountName: hook
      terminationGracePeriodSeconds: 180
      volumes:
      - name: hmac
        secret:
          defaultMode: 420
          secretName: hmac-token
      - name: oauth
        secret:
          defaultMode: 420
          secretName: oauth-token
      - configMap:
          defaultMode: 420
          name: config
        name: config
      - configMap:
          defaultMode: 420
          name: plugins
        name: plugins
