prow/manifests/horologium-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: horologium
  name: horologium
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: horologium
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: horologium
    spec:
      containers:
      - args:
        - --config-path=/etc/config/config.yaml
        - --deck-url=https://https://prow.apps.ci.metal3.io/
        image: gcr.io/k8s-prow/horologium:v20191219-ecbeba384
        imagePullPolicy: IfNotPresent
        name: horologium
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/config
          name: config
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: horologium
      serviceAccountName: horologium
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: config
        name: config
