prow/manifests/plank-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: plank
  name: plank
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: plank
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: plank
    spec:
      containers:
      - args:
        - --dry-run=false
        - --config-path=/etc/config/config.yaml
        image: gcr.io/k8s-prow/plank:v20200518-8da074ad4
        imagePullPolicy: IfNotPresent
        name: plank
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/github
          name: oauth
          readOnly: true
        - mountPath: /etc/config
          name: config
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: plank
      serviceAccountName: plank
      terminationGracePeriodSeconds: 30
      volumes:
      - name: oauth
        secret:
          defaultMode: 420
          secretName: oauth-token
      - configMap:
          defaultMode: 420
          name: config
        name: config
