prow/manifests/sinker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sinker
  name: sinker
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: sinker
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: sinker
    spec:
      containers:
      - args:
        - --config-path=/etc/config/config.yaml
        image: gcr.io/k8s-prow/sinker:v20191219-ecbeba384
        imagePullPolicy: IfNotPresent
        name: sinker
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/config
          name: config
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: sinker
      serviceAccountName: sinker
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: config
        name: config
