prow/manifests/statusreconciler-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: statusreconciler
  name: statusreconciler
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: statusreconciler
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: statusreconciler
    spec:
      containers:
      - args:
        - --dry-run=false
        - --continue-on-error=true
        - --plugin-config=/etc/plugins/plugins.yaml
        - --config-path=/etc/config/config.yaml
        - --github-token-path=/etc/github/oauth
        image: gcr.io/k8s-prow/status-reconciler:v20200518-8da074ad4
        imagePullPolicy: IfNotPresent
        name: statusreconciler
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/github
          name: oauth
          readOnly: true
        - mountPath: /etc/config
          name: config
          readOnly: true
        - mountPath: /etc/plugins
          name: plugins
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: statusreconciler
      serviceAccountName: statusreconciler
      terminationGracePeriodSeconds: 180
      volumes:
      - name: oauth
        secret:
          defaultMode: 420
          secretName: oauth-token
      - configMap:
          defaultMode: 420
          name: config
        name: config
      - configMap:
          defaultMode: 420
          name: plugins
        name: plugins
