prow/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: prow
  annotations:
    kubernetes.io/ingress.class: nginx
    # Change this to your issuer when using cert-manager. Does
    # nothing when not using cert-manager.
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - prow.apps.test.metal3.io
    secretName: metal3-io-tls
  defaultBackend:
    service:
      name: deck
      port:
        number: 80
  rules:
  - host: prow.apps.test.metal3.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: deck
            port:
              number: 80
      - path: /hook
        pathType: Prefix
        backend:
          service:
            name: hook
            port:
              number: 8888
